# pshenmic-dpp-v2-uniffi

./: Cargo.toml  build.rs
src/: lib.rs  pshenmic-dpp.udl
src/enums/: Cargo.toml
src/enums/src/: lib.rs
src/errors/: Cargo.toml  build.rs
src/errors/src/: errors.udl  lib.rs
src/identifier/: Cargo.toml  build.rs  mod.rs
src/identifier/src/: identifier.udl  lib.rs
src/identity/: Cargo.toml  build.rs
src/identity/src/: identity.udl  lib.rs
udls/: identifier.udl
