[package]
name = "pshenmic-dpp-v2-uniffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib", "static"]
name = "pshenmic_dpp"

[dependencies]
pshenmic-dpp-v2 = {git = "http://github.com/owl352/pshenmic-dpp-v2-base"}
uniffi = { version = "0.30.0", features = [ "cli" ] }

[build-dependencies]
uniffi = { version = "0.30.0", features = [ "build" ] }

[features]
ffi-trace = ["uniffi/ffi-trace"]