[package]
name = "pshenmic-dpp-v2-uniffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "pshenmic_dpp"

[dependencies]
pshenmic-dpp-v2 = {git = "http://github.com/owl352/pshenmic-dpp-v2-base"}
uniffi = { version = "0.29.0", features = [ "cli" ] }
identifier = {path = "src/identifier"}

[build-dependencies]
uniffi = { version = "0.29.0", features = [ "build" ] }

[features]
ffi-trace = ["uniffi/ffi-trace"]

[workspace]
resolver = "2"
members = [
    "src/identifier"
]