[package]
name = "identifier"
version = "0.1.0"
edition = "2024"

[dependencies]
uniffi = { version = "0.29.0", features = [ "cli" ] }
pshenmic-dpp-v2 = {git = "http://github.com/owl352/pshenmic-dpp-v2-base"}

[build-dependencies]
uniffi = { version = "0.29.0", features = [ "build" ] }

[features]
ffi-trace = ["uniffi/ffi-trace"]