[package]
name = "identity"
version = "0.1.0"
edition = "2024"

[dependencies]
uniffi = { workspace = true, features = [ "cli" ] }
pshenmic-dpp-v2 = {workspace = true}
identifier = {path = "../identifier"}
enums = {path = "../enums"}
errors = {path = "../errors"}

[build-dependencies]
uniffi = { workspace = true, features = [ "build" ] }

[features]
ffi-trace = ["uniffi/ffi-trace"]